# notify_actions

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  hacs.json  info.md  main.py  pyproject.toml
.github/workflows/: hacs.yaml  hassfest.yaml  issues.yaml  lint.yml
custom_components/notify_actions/: __init__.py  config_flow.py  manifest.json  notify.py  services.yaml  strings.json
custom_components/notify_actions/translations/: de.json  en.json
